<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.probooks.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_eventDetailFragment"
            app:destination="@id/eventDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.probooks.fragments.DashboardFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.probooks.fragments.NotificationsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_accessEventDetailFragment"
            app:destination="@id/accessEventDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/eventDetailFragment"
        android:name="com.example.probooks.fragments.EventDetailFragment"
        android:label="Описание">
        <argument
            android:name="eventItem"
            app:argType="com.example.probooks.models.EventItem"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/accessEventDetailFragment"
        android:name="com.example.probooks.fragments.AccessEventDetailFragment"
        android:label="Описание" >
        <argument
            android:name="AccessItem"
            app:argType="com.example.probooks.models.AccessItem"
            app:nullable="true" />
    </fragment>
</navigation>