<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:layout_gravity="center"
                android:src="@drawable/ic_probookslogo" />
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#5883C3"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Добро пожаловать в современную библиотеку ProBooks!\n\n С нами у вас есть возможность брать книги из нашей библиотеки домой.\n\n Читайте лучшие книги по саморазвитию, продажам, менеджменту, лидерству, стратегии, старту и развитию бизнеса.\n Становитесь лучше вместе с нами!"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5883C3"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="О проекте"
                android:shadowColor="#5883C3"
                android:gravity="center"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5883C3"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity=""
                android:text="ProBooks - это сервис современной библиотеки деловой литературы, который дает возможность читать дорогостоящие книги за небольшую плату.\n\nЦель проекта - помогать нашим читателям становиться лучшей версией себя, сделав деловую литературу более доступной. Вместо покупки одной дорогостоящей книги, вы можете взять у нас в аренду сразу несколько книг.\n\nВы также можете делиться своими книгами с другими, сделав пожертвование в нашу библиотеку. Мы присваиваем имя владельца к каждой пожертвованной книге, таким образом читатели вашей книги будут знать кого благодарить!"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5883C3"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="Стоимость"
                android:shadowColor="#5883C3"
                android:gravity="center"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5883C3"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Вы можете выбрать один из 3-х видов подписки. Минимальный срок подписки 3 месяца"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Подписка на 3 месяца"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="450 сом"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#5883C3"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Подписка на 6 месяцев"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="800 сом"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Экономия 100 сом"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#5883C3"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Подписка на 12 месяцев"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1500 сом"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Экономия 300 сом"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#5883C3"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="• Вы можете взять на дом абсолютно любую книгу из нашей библиотеки \n• Возможность держать книгу у себя 1 месяц \n• Подписка на рассылку, при поступлении новых книг"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5883C3"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="Партнёры"
                android:shadowColor="#5883C3"
                android:gravity="center"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5883C3"/>
            <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/partner1"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
            <ImageView
                android:id="@+id/partner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="partner1"
                android:src="#888888" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/partner2"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
            <ImageView
                android:id="@+id/partner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="partner2"
                android:src="#888888" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5883C3"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="FAQ"
                android:shadowColor="#5883C3"
                android:gravity="center"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5883C3"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q: Что нужно для того, чтобы взять одну из наших книг? \nA: Забронируйте книгу на сайте и заберите ее в нашем офисе. При получении книги необходимо иметь с собой удостоверение личности.\nQ: На какой срок выдается книга?\nA: Книги выдаются на 30 или 60 дней в зависимости от выбора подписки.\nQ: Желаемой книги нет на сайте? "
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer"
                android:clickable="true"
                android:onClick="OnClick"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5883C3"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="Контакты"
                android:shadowColor="#5883C3"
                android:gravity="center"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5883C3"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mailhyperlink"
                android:clickable="true"
                android:onClick="MailRed"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Тел: +996 504 368 000\n
WhatsApp: +996 504 368 000\n
Бизнес-Центр 79, 2 этаж, 201 офис ул. Исанова 79\n
Наш офис работает ПН - ПТ 11:00 — 18:00"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        </LinearLayout>
</ScrollView>
    </androidx.cardview.widget.CardView>
</layout>